0026734: Visualization, D3DHost_View - drop outdated UserDraw interfaces

Correction of test case for issue CR26765